# meshingLibrary

./: .gitignore  .vimrc  CMakeLists.txt  Doxyfile.in  README.md  blockMeshDict  restriction  todo.otl  todo.txt
examples/: .azzopardi.C.swp  .restriction.C.swp  CMakeLists.txt  HuAngeli.C  azzopardi.C  pig.C  pig2.C  restriction.C  restriction2D.C
execs/: blockMeshDict  composedPipe  pig  restriction  restriction2D
src/: CMakeLists.txt  elements.H  mesh.C  mesh.H  primitives.C  primitives.H
src/derived/: block.C  block.H  cylinder.C  cylinder.H  pipes.C  pipes.H
testing/: CMakeLists.txt  primitives.C  restriction.C
